# trusttunnel-ui

./: Cargo.toml  LICENSE  build.rs
.github/workflows/: build.yml
resources/windows/: app.rc
src/: app.rs  app_state.rs  client_manager.rs  components.rs  configuration.rs  connection_state.rs  log_panel.rs  main.rs  process_log.rs  single_instance.rs  state.rs  system.rs  text_area.rs  text_input.rs  theme.rs
src/system/: dns.rs  linux.rs  mod.rs  powershell_dns.rs  proxy.rs  resolvconf.rs  resolved.rs  windows.rs
