[package]
name = "trusttunnel-ui"
version = "0.1.0"
edition = "2024"

[features]
default = ["wayland", "x11"]
wayland = ["gpui/wayland"]
x11 = ["gpui/x11"]

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
unicode-segmentation = "1.11"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
dirs = "6"
gpui = { git = "https://github.com/gohryt/zed", rev = "48b2e0533c35203a7f4a2b0f4a993dd42c41427c", default-features = false }

[target.'cfg(target_os = "windows")'.dependencies]
gpui = { git = "https://github.com/gohryt/zed", rev = "48b2e0533c35203a7f4a2b0f4a993dd42c41427c", default-features = false, features = ["windows-manifest"] }
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Networking_WinInet",
    "Win32_System_Console",
    "Win32_System_JobObjects",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
windows-registry = "0.5"
base64 = "0.22"

[target.'cfg(target_os = "windows")'.build-dependencies]
embed-resource = "3.0"
